# SciEasy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOC_WRITTING_PROMPT.md  Makefile  README.md  _test.parquet  pyproject.toml  setup.py  solution.py  test_grep.sh  test_grep2.sh  test_grep_action.sh
.audit/: scieasy_audit_report_en.md  scieasy_audit_report_zh.md
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  feature.yml  refactor.yml
.github/workflows/: ai-review.yml  ci.yml  codeql.yml  workflow-gate.yml
.specify/: init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.workflow/: gate.py  schema.json
.workflow/active/: 20260403-011522-harden-ci-changelog-check-from-warning-t.json  20260403-123821-phase-4-block-system-implementation.json  20260403-160517-add-code-audit-agent-prompt-for-automate.json  20260403-162720-add-ai-pr-review-workflow-with-codex-age.json  20260403-191229-wave-1-tests-achieve-85-coverage-for-pha.json  20260403-191959-wave-2-tests-edge-cases-and-multi-backen.json  20260403-192429-wave-3-tests-import-coverage-and-extende.json  20260404-024138-adr-017-022-backbone-scaffolding.json  20260404-034009-fix-content-hash-to-include-ndarray-shap.json  20260404-040318-phase-5-0a-collection-class-block-base-u.json  20260404-041317-phase-5-5-event-bus-implementation-adr-0.json  20260404-041450-phase-5-0b-lazylist-codeblock-auto-unpac.json  20260404-041549-phase-5-0c-ioblock-lazy-collection-adapt.json  20260404-041611-phase-5-6-collection-operation-blocks-ad.json  20260404-170726-implement-all-todo-stubs-adr-017-to-adr.json  20260404-192842-batch-1-remove-inputdelivery-postprocess.json  20260404-193701-batch-2-storagereference-paths-backendro.json  20260405-002441-issue-123-block-run-signature-dict-str-a.json  20260405-002958-add-example-workflow-yaml-files-for-cli.json  20260405-003343-docs-project-tree-md-planned-vs-existing.json  20260405-003357-wave-a2-inject-blockregistry-into-dagsch.json  20260405-003437-fix-p1-appblock-command-injection-toctou.json  20260405-005036-wave-a1-implement-auto-flush-data-persis.json  20260405-014138-fix-subprocess-runner-output-pipeline-12.json  20260405-014315-migrate-dagscheduler-from-string-states.json  20260405-025125-phase-7-8-full-stack-delivery-api-layer.json  20260405-154742-fix-localrunner-async-blocking-dagschedu.json  20260405-155826-fix-windows-path-assertions-in-test-adap.json  20260405-182205-fix-frontend-dev-server-missing-api-prox.json  20260405-192530-fix-critical-frontend-design-deviations.json  20260405-192915-fix-178-replace-ppm-image-preview-with-p.json  20260405-193319-fix-179-restrict-cors-allow-origins-befo.json  20260405-193622-fix-180-generate-block-config-schema-fro.json  20260405-194020-phase-1-frontend-bundling-and-scieasy-gu.json  20260405-202012-fix-p0-post-redesign-frontend-issues-pan.json  20260405-204954-fix-project-dialog-ux-remove-useless-fie.json  20260405-204955-fix-panel-resize-broken-onlayoutchanged.json  20260405-212520-fix-websocket-shutdown-hang-by-handling.json  20260405-213859-fix-missing-scrollbars-in-palette-previe.json  20260405-221125-typeregistry-entry-points-scanning-phase.json  (+60 more)
.workflow/hooks/: pre-commit
agents/code-audit/: prompt.md
docs/: data-storage-transport-audit.en.md
docs/adr/: ADR-031-draft.md  ADR-032-draft.md  ADR.md
docs/architecture/: ARCHITECTURE.md  PROJECT_TREE.md  architecture_tree.md
docs/block-development/: architecture-for-block-devs.md  block-contract.md  collection-guide.md  custom-types.md  data-types.md  memory-safety.md  publishing.md  quickstart.md  testing.md
docs/block-development/examples/multi-block-package/: pyproject.toml
docs/block-development/examples/multi-block-package/src/my_blocks/: __init__.py
docs/block-development/examples/multi-block-package/src/my_blocks/blocks/: __init__.py  gaussian_blur.py  threshold.py
docs/block-development/examples/multi-block-package/src/my_blocks/types/: __init__.py  custom_image.py
docs/block-development/examples/multi-block-package/tests/: __init__.py  test_blocks.py
docs/design/: stage-10-1-palette.md
docs/guides/: block-sdk.md
docs/planning/: adr-032-implementation-roadmap.md  block-sdk-rewrite-plan.md
docs/roadmap/: ROADMAP.md  ROADMAP_v0.1.md  ROADMAP_v0.2.md  ROADMAP_v0.3.md  adr-029-variadic-ports-implementation.md
docs/specs/: appblock-variadic-ports.md  phase10-implementation-standards.md  phase11-imaging-block-spec.md  phase11-implementation-standards.md  phase11-lcms-block-spec.md  phase11-srs-block-spec.md
docs/testing/: AI_AGENT_SYSTEM_TESTING_GUIDE.md  phase-0-2-ai-tests.md  phase-0-2-human-tests.md  phase-3-ai-tests.md  phase-3-human-tests.md  phase-4-ai-tests.md  phase-4-human-tests.md  phase-5-ai-tests.md  phase-5-human-tests.md  phase-5-to-8-human-tests.md
examples/workflows/: image_pipeline.yaml  raman_preprocessing.yaml  simple_merge.yaml
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/e2e/: playwright.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  testUtils.ts
scripts/: ai_review.py  overnight-build.ps1
scripts/hooks/: check-ci-after-pr.sh  check-gate-before-pr.sh  check-gate-before-push.sh
scripts/prompts/: review_agent_prompt.md
src/scieasy/: __init__.py
test/: project.yaml
test/system-test-cli-win/: st001_imaging_workflow.yaml  st001_single_image_test.yaml
test/workflows/: main.yaml  raman-preprocessing.yaml
tests/: __init__.py  conftest.py  test_import_coverage.py  test_logging_config.py
tests/ai/: test_block_generator.py  test_config.py  test_generation.py  test_param_optimizer.py  test_parsers.py  test_providers.py  test_type_generator.py  test_validator.py  test_workflow_planner.py
tests/api/: conftest.py  helpers.py  test_ai.py  test_ai_optimize.py  (+16 more)
(+376 files in other folders)
