[project]
name = "scieasy"
version = "0.2.1"
description = "AI-native, inclusive workflow runtime for multimodal scientific data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jiazhen Zhang"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "zarr>=3.0",
    "pyarrow>=15.0",
    "watchdog>=4.0",
    "typer>=0.12",
    "xxhash>=3.4",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psutil>=5.9",  # ADR-022: OS-level memory monitoring
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.30",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",
    "pre-commit>=4.0",
]

[project.scripts]
scieasy = "scieasy.cli.main:app"

[project.entry-points."scieasy.blocks"]
load_data = "scieasy.blocks.io.loaders.load_data:LoadData"
save_data = "scieasy.blocks.io.savers.save_data:SaveData"
process_merge = "scieasy.blocks.process.builtins.merge:MergeBlock"
process_split = "scieasy.blocks.process.builtins.split:SplitBlock"
code_block = "scieasy.blocks.code:CodeBlock"
app_block = "scieasy.blocks.app:AppBlock"
ai_block = "scieasy.blocks.ai:AIBlock"
subworkflow_block = "scieasy.blocks.subworkflow:SubWorkflowBlock"
merge_collection = "scieasy.blocks.process.builtins.merge_collection:MergeCollection"
split_collection = "scieasy.blocks.process.builtins.split_collection:SplitCollection"
filter_collection = "scieasy.blocks.process.builtins.filter_collection:FilterCollection"
slice_collection = "scieasy.blocks.process.builtins.slice_collection:SliceCollection"

# T-TRK-004 / ADR-028 §D4: the ``scieasy.adapters`` entry-point group
# has been removed. Plugin-owned IO blocks now register via the
# ``scieasy.blocks`` entry-point group as ``IOBlock`` subclasses
# (see ADR-028 §D1 + Addendum 1 §C). Core ``LoadData`` and ``SaveData``
# entry-points will be added by T-TRK-007 / T-TRK-008.

# T-008 / ADR-027 D2: the previous entry-points here pointed at
# core ``Image``, ``Spectrum``, and ``PeakTable`` classes that were
# removed in T-006 and T-007. The classes now live in plugin
# packages (``scieasy-blocks-imaging``, ``scieasy-blocks-spectral``)
# which declare their own ``scieasy.types`` entry-points. The core
# repository contributes no built-in domain types via this group.
[project.entry-points."scieasy.types"]

[project.entry-points."scieasy.runners"]
python = "scieasy.blocks.code.runners.python_runner:PythonRunner"
r = "scieasy.blocks.code.runners.r_runner:RRunner"
julia = "scieasy.blocks.code.runners.julia_runner:JuliaRunner"

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scieasy = ["api/static/**/*", "cli/templates/**/*.tpl"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["scieasy"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["scieasy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=scieasy --cov-report=term-missing --cov-fail-under=85"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "requires_imaging: marks tests that need scieasy-blocks-imaging installed (deselect with '-m \"not requires_imaging\"')",
    "requires_r: tests that need an R installation with Rscript on PATH",
    "requires_fiji: marks tests that need a local Fiji install at the master-plan §10 path (deselect with '-m \"not requires_fiji\"'). T-IMG-038 will migrate this marker to packages/scieasy-blocks-imaging/pyproject.toml.",
]

[tool.importlinter]
root_packages = ["scieasy"]

[[tool.importlinter.contracts]]
name = "Core must not depend on blocks, engine, api, ai, or workflow"
type = "forbidden"
source_modules = ["scieasy.core"]
forbidden_modules = ["scieasy.blocks", "scieasy.engine", "scieasy.api", "scieasy.ai", "scieasy.workflow"]

[[tool.importlinter.contracts]]
name = "Blocks must not depend on engine, api, or ai services"
type = "forbidden"
source_modules = ["scieasy.blocks"]
forbidden_modules = ["scieasy.engine", "scieasy.api", "scieasy.ai"]

[[tool.importlinter.contracts]]
name = "Engine must not depend on api or ai services"
type = "forbidden"
source_modules = ["scieasy.engine"]
forbidden_modules = ["scieasy.api", "scieasy.ai"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
tag_format = "v$version"

[tool.coverage.run]
source = ["scieasy"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
